Fix style of overview component
The event overview component had its search and tab bar flying around at
the top. This is now closer to the material design specification:

- https://material.io/guidelines/layout/principles.html
- https://material.io/guidelines/components/tabs.html

There remains an issue with the box shadow of the toolbar overlapping this
sub-navigation.

Also added a variety of doc comments and replaced the computed
group-by-type value with a quasi-cached one (maintaining UAP).

--- a/webapp/src/app/components/event/event-overview/event-overview.style.scss
+++ b/webapp/src/app/components/event/event-overview/event-overview.style.scss
@@ -1,14 +1,59 @@
-.search-bar {
-  background: #fff;
+@import '../../../../assets/sass/theme.scss';
 
-  md-input, input {
-    width: calc(100% - 5rem);
-    margin: 0 .5rem;
-  }
+$toolbar-height: 64px;
+$secondary-bar-height: 48px;
+
+.search-bar::before {
+    position: absolute;
+    top: $toolbar-height;
+    left: 0;
+    right: 0;
+    height: #{2 * $secondary-bar-height};
+
+    background: map-get($conference-app-primary, 500);
+    content: '';
+    box-shadow:
+        0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+}
+
+.search-bar {
+    padding: 0;
+    height: $secondary-bar-height;
+
+    md-input, input {
+        color: #fff;
+        width: 100%;
+    }
+
+}
+
+/deep/ .md-input-underline {
+    border-color: #fff;
+}
+
+/deep/ .md-input-placeholder {
+    &.md-focused, &.md-float {
+      color: #fff;
+      z-index: 2;
+    }
+}
+
+/deep/ .md-tab-header {
+    height: $secondary-bar-height;
+    background: transparent;
+    color: #fff;
+    z-index: 2;
+}
+
+/deep/ md-ink-bar {
+    background: #fff;
 }
 
 conference-calendar {
-  height: calc(100vh - 10rem);
+  /* 64px from the toolbar, 2x 48px from search- and tab-bar */
+  height: calc(100vh - #{$toolbar-height + 2 * $secondary-bar-height});
 }
 
 .info {
