--- a/webapp/src/assets/sass/components/_navigation.scss
+++ b/webapp/src/assets/sass/components/_navigation.scss
@@ -2,8 +2,11 @@ conference-navigation {
     width: 100%;
     position: fixed;
     top: 0;
-    z-index: 2;
-    box-shadow: .1em .1em .1em #888888;
+    z-index: 3;
+    box-shadow:
+        0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
 conference-navigation-user {
